--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
     "styled-components": "4.0.2",
-    "warning": "4.0.2"
+    "warning": "4.0.2",
+    "webpack":"^4.29.0"
   },
   "devDependencies": {
     "@babel/cli": "7.1.2",
