--- a/package.json
+++ b/package.json
@@ -112,7 +112,61 @@
     "semantic-ui-react": "^0.83.0",
     "styled-components": "4.0.2",
     "warning": "4.0.2",
-    "webpack":"^4.29.0"
+    "webpack":"^4.29.0",
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "7.1.0",
+    "@babel/plugin-transform-react-constant-elements": "7.0.0",
+    "@babel/plugin-transform-react-inline-elements": "7.0.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
+    "add-asset-html-webpack-plugin": "3.1.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.4",
+    "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-plugin-lodash": "3.3.4",
+    "babel-plugin-react-intl": "3.0.1",
+    "babel-plugin-react-transform": "3.0.0",
+    "babel-plugin-styled-components": "1.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.19",
+    "circular-dependency-plugin": "5.0.2",
+    "compare-versions": "3.4.0",
+    "compression-webpack-plugin": "2.0.0",
+    "coveralls": "3.0.2",
+    "css-loader": "1.0.0",
+    "file-loader": "2.0.0",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "image-webpack-loader": "4.4.0",
+    "imports-loader": "0.8.0",
+    "jest-cli": "23.6.0",
+    "jest-styled-components": "6.2.2",
+    "lint-staged": "7.3.0",
+    "ngrok": "3.1.0",
+    "node-plop": "0.16.0",
+    "null-loader": "0.1.1",
+    "offline-plugin": "5.0.5",
+    "plop": "2.1.0",
+    "pre-commit": "1.2.2",
+    "prettier": "1.14.3",
+    "react-app-polyfill": "0.1.3",
+    "react-test-renderer": "16.6.0",
+    "rimraf": "2.6.2",
+    "shelljs": "0.8.2",
+    "style-loader": "0.23.1",
+    "svg-url-loader": "2.3.2",
+    "terser-webpack-plugin": "1.1.0",
+    "url-loader": "1.1.2",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.3 ",
+    "webpack-pwa-manifest": "3.7.1",
+    "whatwg-fetch": "3.0.0"
+
   },
   "devDependencies": {
     "@babel/cli": "7.1.2",
